add: 1、支持JDK8 2、新增NIO数据流操作 3、新增POI4.0封装 4、新增常见字符串数据格式校验

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,19 @@
     </properties>
 
     <dependencies>
+        <!-- apache poi module -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <!-- apache poi module -->
+
         <!--json 工具-->
         <dependency>
             <groupId>com.alibaba</groupId>
